logs/flagon.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/flagon'...
Listing './lib/python3.5/site-packages/flagon/backends'...
Listing './lib/python3.5/site-packages/flagon/backends/db_django'...
Compiling './lib/python3.5/site-packages/flagon/backends/togglzfile.py'...
***   File "./lib/python3.5/site-packages/flagon/backends/togglzfile.py", line 10
    except ImportError, ie:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flagon/status_api'...
Compiling './lib/python3.5/site-packages/flagon/status_api/__init__.py'...
***   File "./lib/python3.5/site-packages/flagon/status_api/__init__.py", line 45
    except HTTPException, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flagon-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
